<resources>
    <string name="app_name">Динамические ярлыки</string>
    <string name="app_description">Динамические ярлыки</string>


    <string name="shortcut_label_settings">Настройки</string>
    <string name="shortcut_label_gallery">Галерея</string>
    <string name="shortcut_label_record_video">Запись видео</string>
    <string name="shortcut_label_selfie">Селфи</string>
    <string name="shortcut_label_camera">Камера</string>


    <string name="app_name_settings">Настройки</string>


    <string name="preference_screen_shortcuts">Настройки ярлыков</string>

    <string name="preference_shortcut_page_title">Ярлыки быстрого запуска</string>
    <string name="preference_shortcut_page_title_summary">Настройка ярлыков, содержащихся в значке приложения</string>

    <string name="preference_shortcut_camera">Камера</string>
    <string name="preference_shortcut_camera_summary">Добавить ярлык камеры в значок приложения</string>

    <string name="preference_shortcut_video">Видео</string>
    <string name="preference_shortcut_video_summary">Добавить ярлык видео к значку приложения</string>

    <string name="preference_shortcut_gallery">Галерея</string>
    <string name="preference_shortcut_gallery_summary">Добавить ярлык галереи к значку приложения</string>

    <string name="preference_shortcut_selfie">Селфи</string>
    <string name="preference_shortcut_selfie_summary">Добавить ярлык селфи к значку приложения</string>

    <string name="preference_shortcut_settings">Настройки</string>
    <string name="preference_shortcut_settings_summary">Добавить ярлык настроек к значку приложения</string>

    <string name="calendar">Календарь</string>
    <string name="action_new_event">Новое мероприятие</string>

    <string name="update_shortcuts">Обновить в соответствие с выбранным</string>
    <string name="remove_all_shortcuts">Удалить все</string>
    <string name="create_default_shortcuts">Создать ярлыки по умолчанию</string>
    <string name="error_reading_shortcuts_xml">Ошибка чтения shortcuts.xml</string>
    <string name="default_shortcuts_are_crated">Ярлыки по умолчанию созданы</string>
    <string name="snackbar_close">✖</string>
    <string name="shortcuts_are_updated">Ярлыки обновлены</string>
    <string name="all_shortcuts_are_removed">Все ярлыки удалены</string>
    <string name="manual_shortcuts_management">Ручная настройка ярлыков:</string>

</resources>