<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@color/design_default_color_primary"
        app:titleTextColor="@color/design_default_color_on_primary"
        app:title="@string/app_description"
        app:navigationIconTint="@color/design_default_color_on_primary"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/createDefaultShortcuts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_default_shortcuts"
            android:backgroundTint="#0097A7"/>

        <Button
            android:id="@+id/removeAllShortcuts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_all_shortcuts"
            android:backgroundTint="#D32F2F"/>

        <Button
            android:id="@+id/updateShortcutsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_shortcuts"
            android:backgroundTint="#03A9F4"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAlignment="center"
            android:text="@string/manual_shortcuts_management" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

    </LinearLayout>

</RelativeLayout>